Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                 </a>
 
                 <!-- GitHub -->
-                <a href="https://github.com/ermiassisay" target="_blank" class="flex flex-col items-center space-y-2 text-slate-300 hover:text-white transition group">
+                <a href="https://github.com/Ermimu/" target="_blank" class="flex flex-col items-center space-y-2 text-slate-300 hover:text-white transition group">
                     <div class="p-4 glass rounded-full group-hover:bg-sky-500/20 group-hover:border-sky-500/50 transition">
                         <i data-lucide="github" class="w-6 h-6"></i>
                     </div>
@@ -362,4 +362,5 @@
         };
     </script>
 </body>
+
 </html>
